syntax = "proto3";

service gossip {
    rpc Spread (GossipMsg) returns (Partners) {}
}

message GossipMsg {
    repeated Certificate certificates = 1;
    repeated Note notes = 2;
    repeated Accusation accusations = 3;
    Note ownNote = 4;
}

//Raw certificate
message Certificate {
    bytes raw = 1;
}

//Only populated if not a valid neighbor
message Partners {
    repeated Certificate certificates = 1;
    repeated Note Notes = 2;
}

//accuser and accused are the respective node ids
message Accusation {
    uint64 epoch = 1;
    bytes accuser = 2;
    bytes accused = 3;
    Signature signature = 4;
    bytes mask = 5;
    uint32 ringNum = 6;
}

message Note {
    uint64 epoch = 1;
    bytes id = 2;
    bytes mask = 3;
    Signature signature = 4;
}

//Raw elliptic signature
message Signature {
    bytes r = 1;
    bytes s = 2;
}
